# bergamot-sys

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs
bindings/: CMakeLists.txt  bergamot_wrapper.cpp
src/: bergamot_wrapper.cpp  lib.rs  main.rs
